--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: #f0f0f0;
+            background: linear-gradient(to right, #4CA1AF, #C4E0E5);
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -19,8 +19,10 @@
             background: white;
             padding: 20px;
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            box-shadow: 0 0 20px rgba(0,0,0,0.2);
             text-align: center;
+            width: 80%;
+            max-width: 600px;
         }
         button {
             background: #4CAF50;
@@ -34,12 +36,27 @@
         button:hover {
             background: #45a049;
         }
-        .search-bar {
+        .search-bar input {
+            width: 100%;
+            padding: 12px;
             margin-top: 20px;
+            font-size: 16px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
         }
         .extension-list {
             margin-top: 20px;
             text-align: left;
+        }
+        .extension-item {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            margin-top: 10px;
+            background: #f9f9f9;
         }
         .switch {
             position: relative;
@@ -98,22 +115,51 @@
 
     <script>
         function scanExtensions() {
+            // Display browser information
             document.getElementById('browser-info').innerText = navigator.userAgent;
-            const extensions = ["Extension 1", "Extension 2", "Extension 3"];
+
+            // Mock extension list
+            const extensions = [
+                { name: "Extension 1", enabled: true },
+                { name: "Extension 2", enabled: false },
+                { name: "Extension 3", enabled: true }
+            ];
+
             const extensionList = document.getElementById('extension-list');
             extensionList.innerHTML = '';
+
             extensions.forEach(extension => {
                 const div = document.createElement('div');
+                div.className = 'extension-item';
                 div.innerHTML = `
-                    ${extension}
+                    ${extension.name}
                     <label class="switch">
-                        <input type="checkbox">
+                        <input type="checkbox" ${extension.enabled ? 'checked' : ''} onclick="toggleExtension('${extension.name}')">
                         <span class="slider"></span>
                     </label>
                 `;
                 extensionList.appendChild(div);
             });
         }
+
+        function toggleExtension(extensionName) {
+            console.log(`Toggling extension: ${extensionName}`);
+            // Here you would add the code to enable/disable the extension via the browser's extension API
+        }
+
+        // Search functionality
+        document.getElementById('search-bar').addEventListener('input', function() {
+            const query = this.value.toLowerCase();
+            const extensions = document.querySelectorAll('.extension-item');
+            extensions.forEach(extension => {
+                const name = extension.textContent.toLowerCase();
+                if (name.includes(query)) {
+                    extension.style.display = '';
+                } else {
+                    extension.style.display = 'none';
+                }
+            });
+        });
     </script>
 </body>
 </html>
