--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient(to right, #4CA1AF, #C4E0E5);
+            background: linear-gradient(to right, #000000, #FFA500);
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -16,17 +16,18 @@
             margin: 0;
         }
         .container {
-            background: white;
+            background: #333;
             padding: 20px;
             border-radius: 10px;
-            box-shadow: 0 0 20px rgba(0,0,0,0.2);
+            box-shadow: 0 0 20px rgba(255,165,0,0.5);
             text-align: center;
             width: 80%;
             max-width: 600px;
+            color: white;
         }
         button {
-            background: #4CAF50;
-            color: white;
+            background: #FFA500;
+            color: black;
             padding: 15px 32px;
             border: none;
             border-radius: 5px;
@@ -34,7 +35,7 @@
             font-size: 16px;
         }
         button:hover {
-            background: #45a049;
+            background: #FF8C00;
         }
         .search-bar input {
             width: 100%;
@@ -56,7 +57,7 @@
             border: 1px solid #ddd;
             border-radius: 5px;
             margin-top: 10px;
-            background: #f9f9f9;
+            background: #444;
         }
         .switch {
             position: relative;
@@ -90,13 +91,13 @@
             border-radius: 50%;
         }
         input:checked + .slider {
-            background-color: #4CAF50;
+            background-color: #FFA500;
         }
         input:checked + .slider:before {
             transform: translateX(20px);
         }
         .browser-info {
-            color: green;
+            color: #32CD32;
             position: absolute;
             top: 20px;
             right: 20px;
