--- a/index.html
+++ b/index.html
@@ -16,21 +16,38 @@
         }
 
         h1 {
-            margin: 20px 0;
+            margin: 10px 0;
             color: #7289DA;
         }
 
         iframe {
-            width: 80%;
-            height: 80%;
+            width: 100%;
+            height: 90%;
             border: none;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
+
+        @media (max-width: 768px) {
+            iframe {
+                height: 80%;
+            }
+        }
     </style>
 </head>
 <body>
-    <h1>Mini Browser: discord.com</h1>
-    <iframe src="https://discord.com" title="Mini Browser" allowfullscreen></iframe>
+    <h1>Mini Browser</h1>
+    <iframe id="miniBrowser" src="" title="Mini Browser" allowfullscreen></iframe>
+
+    <script>
+        // Function to set the iframe src to discord.com or any other URL
+        function loadPage(url) {
+            const iframe = document.getElementById('miniBrowser');
+            iframe.src = url;
+        }
+
+        // Load discord.com as default
+        loadPage('https://discord.com');
+    </script>
 </body>
 </html>
