--- a/index.html
+++ b/index.html
@@ -3,73 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mini Google Browser</title>
+    <title>Embed Redirect</title>
     <style>
         body {
-            margin: 0;
-            font-family: Arial, sans-serif;
             display: flex;
-            flex-direction: column;
+            justify-content: center;
             align-items: center;
             height: 100vh;
+            margin: 0;
             background-color: #f0f0f0;
+            font-family: Arial, sans-serif;
         }
 
-        h1 {
-            margin: 10px 0;
-            color: #4285F4; /* Google Blue */
+        .embed-container {
+            text-align: center;
         }
 
-        input[type="text"] {
-            width: 80%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            margin-bottom: 10px;
-        }
-
-        button {
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            background-color: #4285F4; /* Google Blue */
+        #embedButton {
+            background-color: #007BFF; /* Bootstrap primary color */
             color: white;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        button:hover {
-            background-color: #357ae8; /* Darker shade of Google Blue */
-        }
-
-        iframe {
-            width: 100%;
-            height: 80%;
             border: none;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            padding: 15px 25px;
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
         }
 
-        @media (max-width: 768px) {
-            iframe {
-                height: 70%;
-            }
+        #embedButton:hover {
+            background-color: #0056b3; /* Darker shade on hover */
         }
     </style>
 </head>
 <body>
-    <h1>Mini Google Browser</h1>
-    <input type="text" id="searchInput" placeholder="Enter your search term...">
-    <button onclick="performSearch()">Search</button>
-    <iframe id="miniBrowser" src="https://www.google.com" title="Mini Google Browser" allowfullscreen></iframe>
+    <div class="embed-container">
+        <button id="embedButton">Go to 1v1.lol</button>
+    </div>
 
     <script>
-        function performSearch() {
-            const query = document.getElementById('searchInput').value;
-            const iframe = document.getElementById('miniBrowser');
-            const searchUrl = `https://www.google.com/search?q=${encodeURIComponent(query)}`;
-            iframe.src = searchUrl;
-        }
+        document.getElementById("embedButton").addEventListener("click", function() {
+            window.location.href = "https://1v1.lol";
+        });
     </script>
 </body>
 </html>
