--- a/index.html
+++ b/index.html
@@ -3,47 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Embed Redirect</title>
+    <title>Embedded 1v1.lol</title>
     <style>
-        body {
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
+        }
+        .iframe-container {
+            width: 100%;
+            height: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            margin: 0;
             background-color: #f0f0f0;
-            font-family: Arial, sans-serif;
         }
-
-        .embed-container {
-            text-align: center;
-        }
-
-        #embedButton {
-            background-color: #007BFF; /* Bootstrap primary color */
-            color: white;
+        iframe {
             border: none;
-            padding: 15px 25px;
-            font-size: 16px;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-
-        #embedButton:hover {
-            background-color: #0056b3; /* Darker shade on hover */
+            width: 100%;
+            height: 100%;
         }
     </style>
 </head>
 <body>
-    <div class="embed-container">
-        <button id="embedButton">Go to 1v1.lol</button>
+    <div class="iframe-container">
+        <iframe src="https://1v1.lol" title="1v1.lol"></iframe>
     </div>
-
-    <script>
-        document.getElementById("embedButton").addEventListener("click", function() {
-            window.location.href = "https://1v1.lol";
-        });
-    </script>
 </body>
 </html>
