--- a/index.html
+++ b/index.html
@@ -1,66 +1,141 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Activity Hub</title>
+    <title>Pizza Hub Activity</title>
     <style>
+        :root {
+            --primary-color: #ff6600;
+            --background-color: #1c1c1c;
+            --nav-background-color: #333;
+            --card-background-color: #262626;
+            --text-color: #fff;
+            --text-secondary-color: #aaa;
+            --button-hover-color: #ff8533;
+            --box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+        }
         body {
-            background-color: #000;
-            color: #FFA500;
-            font-family: 'Arial', sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: var(--background-color);
+            color: var(--text-color);
+        }
+        header {
+            background-color: var(--primary-color);
+            padding: 20px;
+            text-align: center;
+        }
+        header h1 {
             margin: 0;
         }
-        .container {
+        nav {
+            background-color: var(--nav-background-color);
+            padding: 10px;
             text-align: center;
-            border: 2px solid #FFA500;
-            border-radius: 10px;
+        }
+        nav a {
+            color: var(--primary-color);
+            margin: 0 15px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
             padding: 20px;
-            background: rgba(255, 165, 0, 0.1);
         }
-        .search-bar input[type="text"] {
-            width: 80%;
-            padding: 10px;
-            border: 2px solid #FFA500;
-            border-radius: 5px;
-            outline: none;
-            background: rgba(255, 165, 0, 0.1);
-            color: #FFA500;
-            font-size: 16px;
+        .activity-card {
+            background-color: var(--card-background-color);
+            width: 250px;
+            margin: 15px;
+            padding: 15px;
+            border-radius: 10px;
+            text-align: center;
+            box-shadow: var(--box-shadow);
         }
-        .dropdown select {
+        .activity-card img {
+            width: 100%;
+            border-radius: 10px;
+        }
+        .activity-card h3 {
+            color: var(--primary-color);
+        }
+        .activity-card p {
+            color: var(--text-secondary-color);
+        }
+        .activity-card button {
+            background-color: var(--primary-color);
+            border: none;
             padding: 10px;
-            border: 2px solid #FFA500;
-            border-radius: 5px;
-            background: #FFA500;
-            color: #000;
-            font-size: 16px;
+            color: var(--text-color);
             cursor: pointer;
+            border-radius: 5px;
         }
-        h1 {
-            font-size: 36px;
-            margin-bottom: 20px;
+        .activity-card button:hover {
+            background-color: var(--button-hover-color);
+        }
+        footer {
+            background-color: var(--nav-background-color);
+            padding: 20px;
+            text-align: center;
+        }
+        @media (max-width: 768px) {
+            .activity-card {
+                width: 100%;
+            }
         }
     </style>
 </head>
 <body>
+
+    <header>
+        <h1>Pizza Hub Activity</h1>
+    </header>
+
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">Popular Activities</a>
+        <a href="#">New Releases</a>
+        <a href="#">Categories</a>
+        <a href="#">Contact</a>
+    </nav>
+
     <div class="container">
-        <h1>Activity Hub</h1>
-        <div class="search-bar">
-            <input type="text" placeholder="Search for activities">
+        <div class="activity-card">
+            <img src="https://via.placeholder.com/250x150" alt="Activity 1">
+            <h3>Activity Title 1</h3>
+            <p>A short description of Activity 1.</p>
+            <button>Learn More</button>
         </div>
-        <div class="dropdown">
-            <select>
-                <option value="shooting">Shooting Activity</option>
-                <option value="driving">Driving Activity</option>
-                <option value="fun">Fun Activity</option>
-            </select>
+        <div class="activity-card">
+            <img src="https://via.placeholder.com/250x150" alt="Activity 2">
+            <h3>Activity Title 2</h3>
+            <p>A short description of Activity 2.</p>
+            <button>Learn More</button>
+        </div>
+        <div class="activity-card">
+            <img src="https://via.placeholder.com/250x150" alt="Activity 3">
+            <h3>Activity Title 3</h3>
+            <p>A short description of Activity 3.</p>
+            <button>Learn More</button>
+        </div>
+        <div class="activity-card">
+            <img src="https://via.placeholder.com/250x150" alt="Activity 4">
+            <h3>Activity Title 4</h3>
+            <p>A short description of Activity 4.</p>
+            <button>Learn More</button>
         </div>
     </div>
+
+    <footer>
+        <p>© 2024 Pizza Hub Activity. All Rights Reserved.</p>
+    </footer>
+
 </body>
 </html>
