--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
         :root {
             --primary-color: #ff6600;
             --background-color: #1c1c1c;
-            --nav-background-color: #333;
-            --card-background-color: #262626;
+            --nav-background-color: #222;
+            --card-background-color: #333;
             --text-color: #fff;
             --text-secondary-color: #aaa;
             --button-hover-color: #ff8533;
-            --box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+            --box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+            --border-radius: 10px;
+            --transition-speed: 0.3s;
         }
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Helvetica Neue', sans-serif;
             margin: 0;
             padding: 0;
             background-color: var(--background-color);
@@ -32,17 +34,18 @@
         }
         nav {
             background-color: var(--nav-background-color);
-            padding: 10px;
+            padding: 15px;
             text-align: center;
         }
         nav a {
             color: var(--primary-color);
-            margin: 0 15px;
+            margin: 0 20px;
             text-decoration: none;
             font-weight: bold;
+            transition: color var(--transition-speed);
         }
         nav a:hover {
-            text-decoration: underline;
+            color: var(--button-hover-color);
         }
         .container {
             display: flex;
@@ -52,16 +55,21 @@
         }
         .activity-card {
             background-color: var(--card-background-color);
-            width: 250px;
+            width: 280px;
             margin: 15px;
-            padding: 15px;
-            border-radius: 10px;
+            padding: 20px;
+            border-radius: var(--border-radius);
             text-align: center;
             box-shadow: var(--box-shadow);
+            transition: transform var(--transition-speed), box-shadow var(--transition-speed);
+        }
+        .activity-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
         }
         .activity-card img {
             width: 100%;
-            border-radius: 10px;
+            border-radius: var(--border-radius);
         }
         .activity-card h3 {
             color: var(--primary-color);
@@ -72,10 +80,11 @@
         .activity-card button {
             background-color: var(--primary-color);
             border: none;
-            padding: 10px;
+            padding: 10px 15px;
             color: var(--text-color);
             cursor: pointer;
             border-radius: 5px;
+            transition: background-color var(--transition-speed);
         }
         .activity-card button:hover {
             background-color: var(--button-hover-color);
@@ -108,25 +117,25 @@
 
     <div class="container">
         <div class="activity-card">
-            <img src="https://via.placeholder.com/250x150" alt="Activity 1">
+            <img src="https://via.placeholder.com/280x180" alt="Activity 1">
             <h3>Activity Title 1</h3>
             <p>A short description of Activity 1.</p>
             <button>Learn More</button>
         </div>
         <div class="activity-card">
-            <img src="https://via.placeholder.com/250x150" alt="Activity 2">
+            <img src="https://via.placeholder.com/280x180" alt="Activity 2">
             <h3>Activity Title 2</h3>
             <p>A short description of Activity 2.</p>
             <button>Learn More</button>
         </div>
         <div class="activity-card">
-            <img src="https://via.placeholder.com/250x150" alt="Activity 3">
+            <img src="https://via.placeholder.com/280x180" alt="Activity 3">
             <h3>Activity Title 3</h3>
             <p>A short description of Activity 3.</p>
             <button>Learn More</button>
         </div>
         <div class="activity-card">
-            <img src="https://via.placeholder.com/250x150" alt="Activity 4">
+            <img src="https://via.placeholder.com/280x180" alt="Activity 4">
             <h3>Activity Title 4</h3>
             <p>A short description of Activity 4.</p>
             <button>Learn More</button>
