--- a/index.html
+++ b/index.html
@@ -3,148 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizza Hub Activity</title>
+    <title>Pizza Hangout</title>
     <style>
-        :root {
-            --primary-color: #ff6600;
-            --background-color: #1c1c1c;
-            --nav-background-color: #222;
-            --card-background-color: #333;
-            --text-color: #fff;
-            --text-secondary-color: #aaa;
-            --button-hover-color: #ff8533;
-            --box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-            --border-radius: 10px;
-            --transition-speed: 0.3s;
-        }
         body {
-            font-family: 'Helvetica Neue', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: var(--background-color);
-            color: var(--text-color);
-        }
-        header {
-            background-color: var(--primary-color);
-            padding: 20px;
-            text-align: center;
-        }
-        header h1 {
-            margin: 0;
-        }
-        nav {
-            background-color: var(--nav-background-color);
-            padding: 15px;
-            text-align: center;
-        }
-        nav a {
-            color: var(--primary-color);
-            margin: 0 20px;
-            text-decoration: none;
-            font-weight: bold;
-            transition: color var(--transition-speed);
-        }
-        nav a:hover {
-            color: var(--button-hover-color);
-        }
-        .container {
+            background-color: black;
+            color: white;
             display: flex;
-            flex-wrap: wrap;
+            flex-direction: column;
+            align-items: center;
             justify-content: center;
-            padding: 20px;
+            height: 100vh;
+            margin: 0;
         }
-        .activity-card {
-            background-color: var(--card-background-color);
-            width: 280px;
-            margin: 15px;
-            padding: 20px;
-            border-radius: var(--border-radius);
-            text-align: center;
-            box-shadow: var(--box-shadow);
-            transition: transform var(--transition-speed), box-shadow var(--transition-speed);
+        .title {
+            font-size: 3em;
+            color: orange;
         }
-        .activity-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+        .navbar {
+            margin-top: 20px;
         }
-        .activity-card img {
-            width: 100%;
-            border-radius: var(--border-radius);
+        .navbar a {
+            margin: 0 10px;
+            text-decoration: none;
+            color: white;
+            font-size: 1.5em;
         }
-        .activity-card h3 {
-            color: var(--primary-color);
+        .buttons {
+            margin-top: 50px;
         }
-        .activity-card p {
-            color: var(--text-secondary-color);
-        }
-        .activity-card button {
-            background-color: var(--primary-color);
+        .buttons button {
+            background-color: orange;
+            color: black;
             border: none;
-            padding: 10px 15px;
-            color: var(--text-color);
+            padding: 10px 20px;
+            margin: 10px;
+            font-size: 1em;
             cursor: pointer;
-            border-radius: 5px;
-            transition: background-color var(--transition-speed);
-        }
-        .activity-card button:hover {
-            background-color: var(--button-hover-color);
-        }
-        footer {
-            background-color: var(--nav-background-color);
-            padding: 20px;
-            text-align: center;
-        }
-        @media (max-width: 768px) {
-            .activity-card {
-                width: 100%;
-            }
         }
     </style>
 </head>
 <body>
-
-    <header>
-        <h1>Pizza Hub Activity</h1>
-    </header>
-
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">Popular Activities</a>
-        <a href="#">New Releases</a>
-        <a href="#">Categories</a>
-        <a href="#">Contact</a>
-    </nav>
-
-    <div class="container">
-        <div class="activity-card">
-            <img src="https://via.placeholder.com/280x180" alt="Activity 1">
-            <h3>Activity Title 1</h3>
-            <p>A short description of Activity 1.</p>
-            <button>Learn More</button>
-        </div>
-        <div class="activity-card">
-            <img src="https://via.placeholder.com/280x180" alt="Activity 2">
-            <h3>Activity Title 2</h3>
-            <p>A short description of Activity 2.</p>
-            <button>Learn More</button>
-        </div>
-        <div class="activity-card">
-            <img src="https://via.placeholder.com/280x180" alt="Activity 3">
-            <h3>Activity Title 3</h3>
-            <p>A short description of Activity 3.</p>
-            <button>Learn More</button>
-        </div>
-        <div class="activity-card">
-            <img src="https://via.placeholder.com/280x180" alt="Activity 4">
-            <h3>Activity Title 4</h3>
-            <p>A short description of Activity 4.</p>
-            <button>Learn More</button>
-        </div>
+    <div class="title">
+        Welcome to <span style="color: orange;">Pizza Hangout</span>
     </div>
-
-    <footer>
-        <p>© 2024 Pizza Hub Activity. All Rights Reserved.</p>
-    </footer>
-
+    <div class="navbar">
+        <a href="#activitys">Activitys</a>
+        <a href="#apps">Apps</a>
+        <a href="#search">Search</a>
+    </div>
+    <div class="buttons">
+        <button>Join our discord</button>
+        <button>Launch in about:blink</button>
+    </div>
 </body>
 </html>
