--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza Hangout</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
         body, html {
             margin: 0;
             padding: 0;
             height: 100%;
-            font-family: Arial, sans-serif;
-            background: linear-gradient(black, orange);
+            font-family: 'Roboto', sans-serif;
+            background: linear-gradient(to bottom right, black, orange);
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -20,12 +21,12 @@
 
         nav {
             width: 100%;
-            background-color: black;
+            background-color: rgba(0, 0, 0, 0.8);
             position: absolute;
             top: 0;
             display: flex;
             justify-content: center;
-            padding: 10px 0;
+            padding: 15px 0;
         }
 
         nav ul {
@@ -33,7 +34,7 @@
             padding: 0;
             margin: 0;
             display: flex;
-            gap: 20px;
+            gap: 30px;
         }
 
         nav ul li {
@@ -43,7 +44,8 @@
         nav ul li a {
             color: white;
             text-decoration: none;
-            font-size: 18px;
+            font-size: 20px;
+            transition: color 0.3s ease;
         }
 
         nav ul li a:hover {
@@ -51,7 +53,7 @@
         }
 
         h1 {
-            font-size: 50px;
+            font-size: 60px;
             text-align: center;
         }
 
@@ -62,29 +64,30 @@
         .button-container {
             display: flex;
             gap: 20px;
-            margin-top: 20px;
+            margin-top: 30px;
         }
 
         .button {
             background-color: orange;
-            color: black;
+            color: white;
             border: none;
             padding: 15px 30px;
-            font-size: 18px;
-            border-radius: 5px;
+            font-size: 20px;
+            border-radius: 25px;
             cursor: pointer;
-            transition: background-color 0.3s ease;
+            transition: background-color 0.3s ease, color 0.3s ease;
         }
 
         .button:hover {
             background-color: darkorange;
+            color: white;
         }
     </style>
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="#">Activitys</a></li>
+            <li><a href="#">Activities</a></li>
             <li><a href="#">Apps</a></li>
             <li><a href="#">Search</a></li>
         </ul>
