--- a/index.html
+++ b/index.html
@@ -3,110 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizza Hangout</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <title>Shell Shocker</title>
     <style>
         body, html {
             margin: 0;
-            padding: 0;
             height: 100%;
-            font-family: 'Poppins', sans-serif;
-            background: linear-gradient(to bottom right, #141e30, #243b55);
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            color: #fff;
+            overflow: hidden;
         }
-
-        nav {
+        iframe {
             width: 100%;
-            background-color: rgba(20, 30, 48, 0.9);
-            position: absolute;
-            top: 0;
-            display: flex;
-            justify-content: space-between;
-            padding: 15px 30px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        nav ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            display: flex;
-            gap: 20px;
-        }
-
-        nav ul li {
-            display: inline;
-        }
-
-        nav ul li a {
-            color: #fff;
-            text-decoration: none;
-            font-size: 18px;
-            transition: color 0.3s ease;
-        }
-
-        nav ul li a:hover {
-            color: #ff6f61;
-        }
-
-        .logo {
-            font-size: 24px;
-            font-weight: 700;
-            color: #ff6f61;
-        }
-
-        h1 {
-            font-size: 60px;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        .highlight-orange {
-            color: #ff6f61;
-        }
-
-        .button-container {
-            display: flex;
-            gap: 20px;
-            margin-top: 30px;
-        }
-
-        .button {
-            background-color: #ff6f61;
-            color: white;
+            height: 100%;
             border: none;
-            padding: 15px 30px;
-            font-size: 20px;
-            border-radius: 25px;
-            cursor: pointer;
-            transition: background-color 0.3s ease, color 0.3s ease;
-        }
-
-        .button:hover {
-            background-color: #ff8563;
-            color: white;
         }
     </style>
 </head>
 <body>
-    <nav>
-        <div class="logo">Pizza Hangout</div>
-        <ul>
-            <li><a href="#">Activities</a></li>
-            <li><a href="#">Apps</a></li>
-            <li><a href="#">Search</a></li>
-        </ul>
-    </nav>
-
-    <h1>Welcome to <span class="highlight-orange">Pizza Hangout</span></h1>
-
-    <div class="button-container">
-        <button class="button" onclick="window.location.href='https://discord.com'">Join our Discord</button>
-        <button class="button" onclick="window.location.href='about:blank'">Launch in about:blank</button>
-    </div>
+    <iframe src="https://shellshock.io/ title="Embedded Website"></iframe>
 </body>
 </html>
