--- a/games list/index.html
+++ b/games list/index.html
@@ -39,7 +39,7 @@
         <h1>Gamelists</h1>
         <ul>
             <li><a href="https://pizzahub.pro/bitlife" target="_blank">pizzahub.pro/bitlife</a></li>
-            <li><a href="https://pizzahub.pro" target="_blank">pizzahub.pro</a> - Shell Shockers</li>
+            <li><a href="https://pizzahub.pro" target="_blank">pizzahub.pro</a> - Shell Shockers, and main website.</li>
             <li><a href="https://pizzahub.pro/slope" target="_blank">pizzahub.pro/slope</a> - Slope</li>
         </ul>
     </div>
