--- a/games list/index.html
+++ b/games list/index.html
@@ -41,7 +41,7 @@
             <li><a href="https://pizzahub.pro/bitlife" target="_blank">pizzahub.pro/bitlife</a></li>
             <li><a href="https://pizzahub.pro" target="_blank">pizzahub.pro</a> - Shell Shockers, and main website.</li>
             <li><a href="https://pizzahub.pro/slope" target="_blank">pizzahub.pro/slope</a> - Slope</li>
-            <li><a href="https://pizzahub.pro/slope" target="_blank">pizzahub.pro/Roblox</a> - Roblox</li>
+            <li><a href="https://pizzahub.pro/slope" target="_blank">pizzahub.pro/Roblox/</a> - Roblox</li>
         </ul>
     </div>
 </body>
