--- a/Roblox/index.html
+++ b/Roblox/index.html
@@ -18,6 +18,6 @@
     </style>
 </head>
 <body>
-    <iframe src= "https://now.gg/apps/roblox-corporation/5349/roblox.html" title="Embedded Website"></iframe>
+    <iframe src= "https://orteil.dashnet.org/cookieclicker/" title="Embedded Website"></iframe>
 </body>
 </html>
