--- a/cookieclicker/index.html
+++ b/cookieclicker/index.html
@@ -18,6 +18,6 @@
     </style>
 </head>
 <body>
-    <iframe src= "https://orteil.dashnet.org/cookieclicker/" title="Embedded Website"></iframe>
+    <iframe src= "https://bigfoot9999.github.io/cc/" title="Embedded Website"></iframe>
 </body>
 </html>
