--- a/slope/index.html
+++ b/slope/index.html
@@ -18,6 +18,6 @@
     </style>
 </head>
 <body>
-    <iframe src="https://slope4classroom.com/" title="Embedded Website"></iframe>
+    <iframe src="https://slope3.com" title="Embedded Website"></iframe>
 </body>
 </html>
