--- a/whatbeatsrock/index.html
+++ b/whatbeatsrock/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <input type="text" id="urlInput" value="https://whatbeatsrock.com" placeholder="Enter website URL">
-    <button onclick="loadWebsite()">Load website</button>
+    <button onclick="loadWebsite()">Load Website</button>
     <iframe id="websiteFrame" src="https://whatbeatsrock.com" title="Embedded Website"></iframe>
 
     <script>
