--- a/games list/index.html
+++ b/games list/index.html
@@ -42,7 +42,8 @@
             <li><a href="https://pizzahub.pro" target="_blank">pizzahub.pro</a> - Shell Shockers, and main website.</li>
             <li><a href="https://pizzahub.pro/slope" target="_blank">pizzahub.pro/slope</a> - Slope</li>
             <li><a href="https://pizzahub.pro/Roblox/" target="_blank">pizzahub.pro/Roblox/</a> - Roblox</li>
-            <li><a href="https://pizzahub.pro/Cookieclicker/" target="_blank">pizzahub.pro/cookieclicker/</a> - Cookieclicker/li>
+            <li><a href="https://pizzahub.pro/Cookieclicker/" target="_blank">pizzahub.pro/cookieclicker/</a> - Cookieclicker</li>
+            <li><a href="https://pizzahub.pro/driftboss" target="_blank">pizzahub.pro/driftboss</a> - Drift Boss</li>
         </ul>
     </div>
 </body>
